[package]
name = "rynda-format"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
include = ["LICENSE"]
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11.2"
ndarray = "0.15.3"
num-traits = "0.2.14"